force-app/main/default/objects/Transacao__c/Transacao__c.object-meta.xml
<CustomObject>
    <description>Referente a transação de ativos entra carteiras</description>
    <label>Transação</label>
    <nameField>
        <displayFormat>TR-{0000}</displayFormat>
        <label>Número da Transação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transações</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>