force-app/main/default/objects/Transacao__c/fields/AtivoDaCarteira__c.field-meta.xml
<CustomField>
    <fullName>AtivoDaCarteira__c</fullName>
    <description>relacionamento mestre detalhe entre o filho transação e o pai ativo da carteira</description>
    <inlineHelpText>relacionamento mestre detalhe entre o filho transação e o pai ativo da carteira</inlineHelpText>
    <label>Ativo da Carteira</label>
    <referenceTo>Ativo_da_Carteira__c</referenceTo>
    <relationshipLabel>Transações</relationshipLabel>
    <relationshipName>Transacoes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>