force-app/main/default/objects/Transacao__c/fields/Carteira__c.field-meta.xml
<CustomField>
    <fullName>Carteira__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relacionamento entre transação e Ordem.</description>
    <inlineHelpText>Relacionamento entre transação e Ordem.</inlineHelpText>
    <label>Carteira</label>
    <referenceTo>Carteira__c</referenceTo>
    <relationshipLabel>Transações</relationshipLabel>
    <relationshipName>TransacoesCarteira</relationshipName>
    <type>Lookup</type>
</CustomField>