force-app/main/default/objects/Transacao__c/fields/Ordem__c.field-meta.xml
<CustomField>
    <fullName>Ordem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relacionamento mestre detalhe entre o filho transação e o pai Ordem</description>
    <inlineHelpText>Relacionamento mestre detalhe entre o filho transação e o pai Ordem</inlineHelpText>
    <label>Ordem</label>
    <referenceTo>Ordem__c</referenceTo>
    <relationshipLabel>Transações</relationshipLabel>
    <relationshipName>TransacesOrdem</relationshipName>
    <type>Lookup</type>
</CustomField>