force-app/main/default/objects/Transacao__c/fields/ValorOrdem__c.field-meta.xml
<CustomField>
    <fullName>ValorOrdem__c</fullName>
    <formula>Ordem__r.Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Ordem</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>